# iliad_experimental

./: README.md
hri_simulation/launch/: check_detector.launch  strands_people_tracker.launch
iliad_global_planner/: CHANGELOG.rst  CMakeLists.txt  bgp_plugin.xml  package.xml
iliad_global_planner/include/iliad_global_planner/: iliad_global_planner.h
iliad_global_planner/launch/: iliad_sim_test_planner.launch  move_base_iliad_smp.launch
iliad_global_planner/params/: iliad_smp_global_planner_params.yaml  move_base_params.yaml
iliad_global_planner/src/: iliad_global_planner.cpp
iliad_human_local_navigation/: CMakeLists.txt
iliad_human_local_navigation/launch/: laser_filter.launch  together.launch  working-example.launch
iliad_human_local_navigation/scripts/: spencer_to_bayes.py
nav_simulation/launch/: move_base.launch  move_base_dwa.launch  move_base_dwa_copy.launch  move_base_mpc.launch  move_base_teb.launch
nav_simulation/params/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
nav_simulation/rviz/: iliad_cititruck_dwa_nav.rviz
synthetic_qrs_interactions/: CMakeLists.txt  description.txt  package.xml
synthetic_qrs_interactions/launch/: additional_nodes.launch
synthetic_qrs_interactions/scripts/: batch_experiments.bash  experiment.bash  parse_qsr_experiments.py
taros19_experiments/launch/: experiment_setup.launch
taros19_experiments/launch/deleteMe/: S1-N0.launch  S1-N1.launch  S1-N2.launch  S1-N3.launch  S2-N0.launch  S2-N1.launch  S2-N2.launch  S2-N3.launch  (+8 more)
taros19_experiments/scripts/: experiment.bash
